# meta_ai

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pre_validation script.py  pyproject.toml  requirements.txt  server.py  server_out.txt  uvicorn_test.txt
dummy_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
dummy_env/server/: Dockerfile  __init__.py  app.py  dummy_env_environment.py
graders/: __init__.py  easy_grader.py  hard_grader.py  medium_grader.py
my_test_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
my_test_env/server/: Dockerfile  __init__.py  app.py  my_test_env_environment.py
server/: app.py
tests/: __init__.py  test_env.py
